[package]
name = "bevy-simple-interactions"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version="0.16", features=[ "dynamic_linking" ] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

